Add confirm-number and email-login mobile view, Use renamed class

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -53,7 +53,7 @@
                         <div class="_1y9y8er">
                           <header id="panel-header" data-testid="panel-header" class="_fmle54"><button
                               data-testid="panel-header-button" aria-label="Back" role="button" type="button"
-                              class="_u1thwpg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                              class="account-container-mb__menu-btn"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                 aria-hidden="true" role="presentation" focusable="false"
                                 style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
                                 <g fill="none">
@@ -83,12 +83,12 @@
                                       </div>
                                       <div dir="ltr">
                                         <div class="_js9i23"><input placeholder="Email" name="EmailField"
-                                            data-testid="forgot-password-email" class="_c5rhl5"
+                                            data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" autocomplete="off" inputmode="email" type="email"
                                             aria-describedby="forgot-password-email-InputField-help" value=""></div>
                                       </div>
                                     </label></div>
-                                  <div class="_klarpw"></div>
+                                  <div class="place__recommended-no"></div>
                                 </div>
                                 <div>
                                   <div class="_k8r05be"><label class="_1yw7hpv" for="forgot-password-email">
@@ -97,14 +97,14 @@
                                       </div>
                                       <div dir="ltr">
                                         <div class="_fywymp7"><input type="email" placeholder="Email" name="EmailField"
-                                            data-testid="forgot-password-email" class="_c5rhl5"
+                                            data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" value="" autocomplete="off" inputmode="email"
                                             aria-describedby="forgot-password-email-InputField-help"
                                             aria-invalid="true"></div>
                                       </div>
                                     </label></div>
-                                  <div class="_klarpw">
-                                    <div class="_1yhfti2" id="forgot-password-email-InputField-help"
+                                  <div class="place__recommended-no">
+                                    <div class="products-container__alert-warning-date-text" id="forgot-password-email-InputField-help"
                                       data-testid="forgot-password-email-InputField-help-error"><span
                                         style="margin-right: 4px;"><svg viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg" aria-label="Error" role="img"
@@ -310,7 +310,7 @@
                         <div class="_1y9y8er">
                           <header id="panel-header" data-testid="panel-header" class="_fmle54"><button
                               data-testid="panel-header-button" aria-label="Back" role="button" type="button"
-                              class="_u1thwpg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                              class="account-container-mb__menu-btn"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                 aria-hidden="true" role="presentation" focusable="false"
                                 style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
                                 <g fill="none">
@@ -340,12 +340,12 @@
                                       </div>
                                       <div dir="ltr">
                                         <div class="_js9i23"><input placeholder="Email" name="EmailField"
-                                            data-testid="forgot-password-email" class="_c5rhl5"
+                                            data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" autocomplete="off" inputmode="email" type="email"
                                             aria-describedby="forgot-password-email-InputField-help" value=""></div>
                                       </div>
                                     </label></div>
-                                  <div class="_klarpw"></div>
+                                  <div class="place__recommended-no"></div>
                                 </div>
                                 <div>
                                   <div class="_k8r05be"><label class="_1yw7hpv" for="forgot-password-email">
@@ -354,14 +354,14 @@
                                       </div>
                                       <div dir="ltr">
                                         <div class="_fywymp7"><input type="email" placeholder="Email" name="EmailField"
-                                            data-testid="forgot-password-email" class="_c5rhl5"
+                                            data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" value="" autocomplete="off" inputmode="email"
                                             aria-describedby="forgot-password-email-InputField-help"
                                             aria-invalid="true"></div>
                                       </div>
                                     </label></div>
-                                  <div class="_klarpw">
-                                    <div class="_1yhfti2" id="forgot-password-email-InputField-help"
+                                  <div class="place__recommended-no">
+                                    <div class="products-container__alert-warning-date-text" id="forgot-password-email-InputField-help"
                                       data-testid="forgot-password-email-InputField-help-error"><span
                                         style="margin-right: 4px;"><svg viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg" aria-label="Error" role="img"
